--- a/frontend/views/partials/header.ejs
+++ b/frontend/views/partials/header.ejs
@@ -9,7 +9,7 @@
 
     <!-- Stylesheets
 	============================================= -->
-    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,400i,700|Raleway:300,400,500,600,700|Crete+Round:400i" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,400i,700| :300,400,500,600,700|Crete+Round:400i" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="../css/bootstrap.css" type="text/css" />
     <link rel="stylesheet" href="../style.css" type="text/css" />
     <link rel="stylesheet" href="../css/custom.css" type="text/css" />
@@ -40,6 +40,7 @@
 
     <link rel="stylesheet" href="../css/responsive.css" type="text/css" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+
 
     <!-- Document Title
 	============================================= -->
@@ -83,35 +84,21 @@
                                     <div class="white-link-text">Home</div>
                                 </a>
                             </li>
+                            <li>
+                                <a href="/usage/recent-mint">
+                                    <div class="white-link-text">Recently Minted</div>
+                                </a>
+                            </li>
 
                             <li>
-                                <a href="#">
-                                    <div class="white-link-text">Usage</div>
+                                <a href="/usage/newest-events">
+                                    <div class="white-link-text">Newest Events</div>
                                 </a>
-                                <ul>
-                                    <li>
-                                        <a href="/usage/recent-mint">
-                                            <div>Recently Minted</div>
-                                        </a>
-                                    </li>
-                                </ul>
                             </li>
                             <li>
-                                <a href="#">
-                                    <div class="white-link-text">Event Explorer</div>
+                                <a href="/map">
+                                    <div class="white-link-text">Map View</div>
                                 </a>
-                                <ul>
-                                    <li>
-                                        <a href="/usage/newest-events">
-                                            <div>Newest Events</div>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="/map">
-                                            <div>Map View</div>
-                                        </a>
-                                    </li>
-                                </ul>
                             </li>
 
                         </ul>
