--- a/frontend/views/usage/newest-events.ejs
+++ b/frontend/views/usage/newest-events.ejs
@@ -16,7 +16,7 @@
 
     <section id="content">
 
-        <div class="content-wrap nobottompadding">
+        <div class="content-wrap-events nobottompadding">
 
             <!-- Portfolio Items
             ============================================= -->
