--- a/frontend/public/less/variables.less
+++ b/frontend/public/less/variables.less
@@ -4,209 +4,177 @@
 
 -----------------------------------------------------------------------------------*/
 
-
 /* ----------------------------------------------------------------
 	Base Colors
 -----------------------------------------------------------------*/
 
-@theme-color:                   #1ABC9C;
-@body-color:                    #555;
-@heading-color:                 #444;
-
+@theme-color: #1abc9c;
+@body-color: #555;
+@heading-color: #444;
 
 /* ----------------------------------------------------------------
 	Line Height Variables
 -----------------------------------------------------------------*/
 
-@line-height-base:              1.5;
-@line-height-content:           1.8;
-
-
+@line-height-base: 1.5;
+@line-height-content: 1.8;
 
 /* ----------------------------------------------------------------
 	Margins
 -----------------------------------------------------------------*/
 
-@margin-base:                   50px;
-@margin-small:                  30px;
-@margin-big:                    80px;
-
-
+@margin-base: 50px;
+@margin-small: 30px;
+@margin-big: 80px;
 
 /* ----------------------------------------------------------------
 	Font Families
 -----------------------------------------------------------------*/
 
-@body-font:                     'Lato', sans-serif;
-@heading-font:                  'Raleway', sans-serif;
-@secondary-font:                'Crete Round', serif;
-
-
+@body-font: "Lato", sans-serif;
+@heading-font: " ", sans-serif;
+@secondary-font: "Crete Round", serif;
 
 /* ----------------------------------------------------------------
 	Font Sizes
 -----------------------------------------------------------------*/
 
-@font-size-base:                14px;
-@font-size-h1:                  36px;
-@font-size-h2:                  30px;
-@font-size-h3:                  24px;
-@font-size-h4:                  18px;
-@font-size-h5:                  @font-size-base;
-@font-size-h6:                  12px;
-
+@font-size-base: 14px;
+@font-size-h1: 36px;
+@font-size-h2: 30px;
+@font-size-h3: 24px;
+@font-size-h4: 18px;
+@font-size-h5: @font-size-base;
+@font-size-h6: 12px;
 
 /* ----------------------------------------------------------------
 	Layouts
 -----------------------------------------------------------------*/
 
+@postcontent: 74%;
+@postcontent-margin: 4%;
 
-@postcontent:                   74%;
-@postcontent-margin:            4%;
+@sidebar: 100% - (@postcontent + @postcontent-margin);
+@bothsidebar: 100% - ((@sidebar * 2) + (@postcontent-margin * 2));
 
-@sidebar:                       100% - (@postcontent + @postcontent-margin);
-@bothsidebar:                   100% - ( ( @sidebar * 2 ) + ( @postcontent-margin * 2 ) );
-
-
-@section-padding:				60px;
-@section-margin:				60px;
-@section-bg:					#F9F9F9;
-
+@section-padding: 60px;
+@section-margin: 60px;
+@section-bg: #f9f9f9;
 
 /* ----------------------------------------------------------------
 	Top Bar
 -----------------------------------------------------------------*/
 
-@topbar-height:                 45px;
-@topbar-line-height:            (@topbar-height - 1);
-
+@topbar-height: 45px;
+@topbar-line-height: (@topbar-height - 1);
 
 /* ----------------------------------------------------------------
 	Header
 -----------------------------------------------------------------*/
 
-@header-height:                 100px;
+@header-height: 100px;
 
 // Sticky Header
-@sticky-header-height:          60px;
-
+@sticky-header-height: 60px;
 
 // Floating Header Offset
-@header-floating-offset:        60px;
-
+@header-floating-offset: 60px;
 
 // Side Header
-@side-header-width:             260px;
-@side-header-bg:                #FFF;
-
+@side-header-width: 260px;
+@side-header-bg: #fff;
 
 /* ----------------------------------------------------------------
 	Primary Menu
 -----------------------------------------------------------------*/
 
-@primary-menu-padding:				( @header-height - 22 ) / 2;
-@sticky-menu-padding:				( @sticky-header-height - 22 ) / 2;
+@primary-menu-padding: (@header-height - 22) / 2;
+@sticky-menu-padding: (@sticky-header-height - 22) / 2;
 
-@primary-menu-font:             	@heading-font;
-@primary-menu-font-weight:      	bold;
-@primary-menu-font-size:        	13px;
-@primary-menu-font-tt:          	uppercase;
-@primary-menu-font-color:       	#444;
-@primary-menu-font-spacing:     	1px;
-
+@primary-menu-font: @heading-font;
+@primary-menu-font-weight: bold;
+@primary-menu-font-size: 13px;
+@primary-menu-font-tt: uppercase;
+@primary-menu-font-color: #444;
+@primary-menu-font-spacing: 1px;
 
 // Primary Menu Sub Menu
-@primary-menu-submenu-width:        220px;
-@primary-menu-submenu-font:         @body-font;
-@primary-menu-submenu-font-size:    12px;
-@primary-menu-submenu-font-weight:  600;
-
+@primary-menu-submenu-width: 220px;
+@primary-menu-submenu-font: @body-font;
+@primary-menu-submenu-font-size: 12px;
+@primary-menu-submenu-font-weight: 600;
 
 // Primary Mega menu
-@mega-menu-title:                   @heading-font;
-
-
+@mega-menu-title: @heading-font;
 
 /* ----------------------------------------------------------------
 	Page Title
 -----------------------------------------------------------------*/
 
+@page-title-padding: 50px;
+@page-title-parallax-padding: 100px;
+@page-title-mini-padding: 20px;
 
-@page-title-padding:					50px;
-@page-title-parallax-padding:			100px;
-@page-title-mini-padding:				20px;
+@page-title-bg: #f5f5f5;
+@page-title-bg-dark: #333;
 
-@page-title-bg:							#F5F5F5;
-@page-title-bg-dark:					#333;
+@page-title-size: 28px;
+@page-title-subtitle-size: 18px;
 
-@page-title-size:						28px;
-@page-title-subtitle-size:				18px;
+@page-title-parallax-size: 40px;
+@page-title-parallax-subtitle-size: 22px;
 
-@page-title-parallax-size:				40px;
-@page-title-parallax-subtitle-size:		22px;
-
-@page-title-mini-size:					18px;
-
+@page-title-mini-size: 18px;
 
 /* ----------------------------------------------------------------
 	Portfolio
 -----------------------------------------------------------------*/
 
-
 //Columns Margin
-@portfolio-2-margin:            20px;
-@portfolio-3-margin:            15px;
-@portfolio-4-margin:            12px;
-@portfolio-5-margin:            10px;
-@portfolio-6-margin:            6px;
-
+@portfolio-2-margin: 20px;
+@portfolio-3-margin: 15px;
+@portfolio-4-margin: 12px;
+@portfolio-5-margin: 10px;
+@portfolio-6-margin: 6px;
 
 //Columns Margin for Sidebar
-@portfolio-2-margin-sb:         20px;
-@portfolio-3-margin-sb:         15px;
-@portfolio-4-margin-sb:         12px;
-@portfolio-5-margin-sb:         0;
-
+@portfolio-2-margin-sb: 20px;
+@portfolio-3-margin-sb: 15px;
+@portfolio-4-margin-sb: 12px;
+@portfolio-5-margin-sb: 0;
 
 //Columns Margin for Both Sidebar
-@portfolio-2-margin-bs:         20px;
-@portfolio-3-margin-bs:         11px;
-@portfolio-4-margin-bs:         0;
-
+@portfolio-2-margin-bs: 20px;
+@portfolio-3-margin-bs: 11px;
+@portfolio-4-margin-bs: 0;
 
 /* ----------------------------------------------------------------
 	Shop
 -----------------------------------------------------------------*/
 
 //Columns Margin
-@shop-3-margin:            30px;
-@shop-4-margin:            20px;
-
+@shop-3-margin: 30px;
+@shop-4-margin: 20px;
 
 //Columns Margin for Sidebar
-@shop-2-margin-sb:         40px;
-@shop-3-margin-sb:         25px;
-
+@shop-2-margin-sb: 40px;
+@shop-3-margin-sb: 25px;
 
 //Columns Margin for Both Sidebar
-@shop-2-margin-bs:         40px;
-
+@shop-2-margin-bs: 40px;
 
 /* ----------------------------------------------------------------
 	Blog
 -----------------------------------------------------------------*/
 
 //Columns Margin
-@blog-2-margin:            40px;
-@blog-3-margin:            30px;
-@blog-4-margin:            28px;
-
+@blog-2-margin: 40px;
+@blog-3-margin: 30px;
+@blog-4-margin: 28px;
 
 //Columns Margin for Sidebar
-@blog-2-margin-sb:         40px;
-@blog-3-margin-sb:         25px;
-
+@blog-2-margin-sb: 40px;
+@blog-3-margin-sb: 25px;
 
 //Columns Margin for Both Sidebar
-@blog-2-margin-bs:         40px;
-
+@blog-2-margin-bs: 40px;
