--- a/frontend/views/usage/recent-mint.ejs
+++ b/frontend/views/usage/recent-mint.ejs
@@ -3,108 +3,109 @@
 
         <div class="container clearfix">
             <h1><strong>GET used today (UTC):</strong>
-                <%= Number(locals.todayGET).toFixed(6)%>
+                <div id="mintCount">
+                    <%= `${Number(locals.todayGET.getDebitedFromSilos).toFixed(6)} (${locals.helpers.numberWithCommas(locals.todayGET.mintCount)} tickets)`  %>
+                </div>
             </h1>
-            <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="/">Home</a></li>
-                <li class="breadcrumb-item active" aria-current="page">Recently minted</li>
-            </ol>
         </div>
-
     </section>
     <!-- #page-title end -->
     <section id="content">
 
         <div class="content-wrap">
+            <div id="mintContainer">
+                <div class="container clearfix">
 
-            <div class="container clearfix">
-                <div class="col_full nobottommargin">
+                    <div class="container-fluid py-4">
+                        <div class="row newMints">
+                            <% for(var i = 0; i < locals.recentMints.firstFour.length ; i++) {%>
+                                <div class="col-xl-3 col-sm-6 mb-xl-0 mb-4">
+                                    <div class="card">
+                                        <div class="card-body p-3">
+                                            <div class="row">
+                                                <div class="numbers">
+                                                    <p class="text-sm mb-0">
+                                                        <%= locals.recentMints.firstFour[i].blockTimestamp %>
+                                                    </p>
+                                                    <h5>
+                                                        <%= locals.recentMints.firstFour[i].event.eventName %><br />
+                                                            <span class="text-sm font-weight-bolder"><%= locals.recentMints.firstFour[i].event.ticketeerName %></span>
+                                                    </h5>
+                                                </div>
+                                                <div class="imgTile" style="background-image: url('<%= locals.recentMints.firstFour[i].event.imageUrl %>'" );>
+                                                </div>
+                                                <h6>
+                                                    <%= Number(locals.recentMints.firstFour[i].getDebitedFromSilo).toFixed(6) %> $GET used as fuel.
+                                                </h6>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <% } %>
+                        </div>
 
-                    <h4>newest 4 mints</h4>
+                        <div class="col_full nobottommargin">
+                            <div class="table-responsive">
+                                <table class="table table-striped">
+                                    <thead>
+                                        <tr>
+                                            <th scope="col">Ticket Number</th>
+                                            <th scope="col">Event Name</th>
+                                            <th scope="col">Ticketeer Name</th>
+                                            <th scope="col">$GET used</th>
+                                            <th scope="col">Block Timestamp</th>
+                                            <th scope="col">NFT Explorer</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
 
-                    <div class="table-responsive">
-                        <table class="table table-striped">
-                            <thead>
-                                <tr>
-                                    <th scope="col">Time</th>
-                                    <th scope="col">$GET used</th>
-                                    <th scope="col">Image URL</th>
-                                    <th scope="col">Event Name</th>
-                                </tr>
-                            </thead>
-                            <tbody>
+                                        <% for(var i = 0; i < locals.recentMints.recentMints.length ; i++) {%>
+                                            <tr>
+                                                <td>
+                                                    <%= locals.recentMints.recentMints[i].nftIndex %>
+                                                </td>
+                                                <td>
+                                                    <a href="../event-profile/<%= locals.recentMints.recentMints[i].event.id %>">
+                                                        <%= locals.recentMints.recentMints[i].event.eventName %>
+                                                    </a>
+                                                </td>
+                                                <td>
+                                                    <a href="../ticketeer/<%= locals.recentMints.recentMints[i].event.ticketeerName %>">
+                                                        <%= locals.recentMints.recentMints[i].event.ticketeerName %>
+                                                    </a>
+                                                </td>
 
-                                <% for(var i = 0; i < locals.firstFour.length ; i++) {%>
+                                                <td>
+                                                    <%= locals.recentMints.recentMints[i].getDebitedFromSilo %>
+                                                </td>
+                                                <td>
+                                                    <%= locals.recentMints.recentMints[i].blockTimestamp %>
+                                                </td>
+                                                <td>
+                                                    <a href="https://explorer.get-protocol.io/ticket/<%= locals.recentMints.recentMints[i].nftIndex %>" target="_blank">View Ticket</a>
+                                                </td>
+                                            </tr>
+                                            <% } %>
 
-                                    <tr>
-                                        <td>
-                                            <%= locals.firstFour[i].blockTimestamp %>
-                                        </td>
-                                        <td>
-                                            <%= Number(locals.firstFour[i].getDebitedFromSilo).toFixed(6) %>
-                                        </td>
-                                        <td>
-                                            <%= locals.firstFour[i].event.imageUrl %>
-                                        </td>
-                                        <td>
-                                            <%= locals.firstFour[i].event.eventName %>
-
-                                        </td>
-                                    </tr>
-                                    <% } %>
-
-                            </tbody>
-                        </table>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
                     </div>
-
                 </div>
-
-                <div class="col_full nobottommargin">
-
-                    <h4>more mints</h4>
-
-                    <div class="table-responsive">
-                        <table class="table table-striped">
-                            <thead>
-                                <tr>
-                                    <th scope="col">Ticket Number</th>
-                                    <th scope="col">Event Name</th>
-                                    <th scope="col">$GET used</th>
-                                    <th scope="col">Mint date & time</th>
-                                    <th scope="col">NFT Explorer</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-
-                                <% for(var i = 0; i < locals.recentMinted.length ; i++) {%>
-                                    <tr>
-                                        <td>
-                                            <%= locals.recentMinted[i].nftIndex %>
-                                        </td>
-                                        <td>
-                                            <a href="../event-profile/<%= locals.recentMinted[i].event.id %>">
-                                                <%= locals.recentMinted[i].event.eventName %>
-                                            </a>
-                                        </td>
-                                        <td>
-                                            <%= locals.recentMinted[i].getDebitedFromSilo %>
-                                        </td>
-                                        <td>
-                                            <%= locals.recentMinted[i].blockTimestamp %>
-                                        </td>
-                                        <td>
-                                            <a href="https://explorer.get-protocol.io/ticket/<%= locals.recentMinted[i].nftIndex %>" target="_blank">View Ticket</a>
-                                        </td>
-                                    </tr>
-                                    <% } %>
-
-                            </tbody>
-                        </table>
-                    </div>
-
-                </div>
-
             </div>
-        </div>
-        <!-- /.content -->
-        <%- include ("../partials/footer") %>
+            <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous">
+            </script>
+            <script>
+                $(document).ready(function() {
+                    var intervalId = window.setInterval(function() {
+                        $.post("/usage/request",
+                            function(data, status) {
+                                document.getElementById("mintContainer").innerHTML = data.html;
+                                document.getElementById("mintCount").innerHTML = `${Number(locals.todayGET.getDebitedFromSilos).toFixed(6)} (${locals.helpers.numberWithCommas(locals.todayGET.mintCount)} tickets)`
+                            });
+                    }, 10000);
+                });
+            </script>
+            <!-- /.content -->
+            <%- include ("../partials/footer") %>
