--- a/frontend/views/home.ejs
+++ b/frontend/views/home.ejs
@@ -32,7 +32,7 @@
                                     </div>
                                     <div class="col-4 text-end">
                                         <div class="icon icon-shape getGreen text-center border-radius-md">
-                                            <i class="ni ni-money-coins text-lg opacity-10" aria-hidden="true"></i>
+                                            <i class="icon-ticket ni ni-money-coins text-lg opacity-10" aria-hidden="true"></i>
                                         </div>
                                     </div>
                                 </div>
@@ -71,7 +71,7 @@
                                     </div>
                                     <div class="col-4 text-end">
                                         <div class="icon icon-shape getGreen text-center border-radius-md">
-                                            <i class="ni ni-paper-diploma text-lg opacity-10" aria-hidden="true"></i>
+                                            <i class="icon-chart-line ni ni-paper-diploma text-lg opacity-10" aria-hidden="true"></i>
                                         </div>
                                     </div>
                                 </div>
