--- a/frontend/views/usage/newest-events.ejs
+++ b/frontend/views/usage/newest-events.ejs
@@ -35,7 +35,8 @@
                                     <%= locals.newEvents[i].event.eventName %>
                                 </a>
                             </h3>
-                            <span><%= locals.newEvents[i].event.ticketeerName.substring(0, 8) %></span>
+                            <a href="../ticketeer/<%= locals.newEvents[i].event.ticketeerName %>">
+                                <span><%= locals.newEvents[i].event.ticketeerName.substring(0, 20) %></span></a>
                         </div>
                     </article>
                     <% } %>
