--- a/frontend/views/partials/header.ejs
+++ b/frontend/views/partials/header.ejs
@@ -112,3 +112,14 @@
 
         </header>
         <!-- #header end -->
+        <section id="page-title" class="page-title-mini bottom-border">
+
+            <div class="container clearfix ">
+                <h1><strong>GET used today (UTC):</strong>
+                    <div id="mintCount">
+                        <%= `${Number(locals.todayGET.getDebitedFromSilos).toFixed(6)} (${locals.helpers.numberWithCommas(locals.todayGET.mintCount)} tickets)`  %>
+                    </div>
+                </h1>
+            </div>
+        </section>
+        <!-- #page-title end -->
