--- a/frontend/public/css/custom.css
+++ b/frontend/public/css/custom.css
@@ -9,6 +9,10 @@
     background-color: #44b490;
 }
 
+.bottom-border{
+    margin-bottom: 5px;
+}
+
 .fixed-height-table-scroll {
     max-height: 30%;
     overflow: scroll;
