--- a/frontend/views/usage/recent-mint.ejs
+++ b/frontend/views/usage/recent-mint.ejs
@@ -1,21 +1,8 @@
 <%- include ("../partials/header") %>
-    <section id="page-title" class="page-title-mini">
-
-        <div class="container clearfix">
-            <h1><strong>GET used today (UTC):</strong>
-                <div id="mintCount">
-                    <%= `${Number(locals.todayGET.getDebitedFromSilos).toFixed(6)} (${locals.helpers.numberWithCommas(locals.todayGET.mintCount)} tickets)`  %>
-                </div>
-            </h1>
-        </div>
-    </section>
-    <!-- #page-title end -->
-    <section id="content">
-
-        <div class="content-wrap">
-            <div id="mintContainer">
-                <div class="container clearfix">
-
+<section id="content">
+    <div class="content-wrap">
+        <div id="mintContainer">
+            <div class="container clearfix">
                     <div class="container-fluid py-4">
                         <div class="row newMints">
                             <% for(var i = 0; i < locals.recentMints.firstFour.length ; i++) {%>
@@ -34,7 +21,7 @@
                                                             <span class="text-sm font-weight-bolder"><%= locals.recentMints.firstFour[i].event.ticketeerName %></span></a>
                                                     </h5>
                                                 </div>
-                                                <div class="imgTile" style="background-image: url('<%= locals.recentMints.firstFour[i].event.imageUrl %>'" );>
+                                                <div class="imgTile" style=`background-image: url('<%= locals.recentMints.firstFour[i].event.imageUrl %>' ` );>
                                                 </div>
                                                 <h6>
                                                     <%= Number(locals.recentMints.firstFour[i].getDebitedFromSilo).toFixed(6) %> $GET used as fuel.
@@ -96,10 +83,7 @@
                     </div>
                 </div>
             </div>
-        </div>
-
-        <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous">
-        </script>
+            </div>
         <script>
             $(document).ready(function() {
                 var intervalId = window.setInterval(function() {
