--- a/frontend/views/usage/recent-mint.ejs
+++ b/frontend/views/usage/recent-mint.ejs
@@ -16,12 +16,12 @@
                                                     </p>
                                                     <h5>
                                                         <a href="../event-profile/<%= locals.recentMints.firstFour[i].event.id %>">
-                                                            <%= locals.recentMints.firstFour[i].event.eventName %><br /></a>
+                                                            <%= locals.helpers.truncate(locals.recentMints.firstFour[i].event.eventName, 20) %><br /></a>
                                                         <a href="../ticketeer/<%= locals.recentMints.firstFour[i].event.ticketeerName %>">
                                                             <span class="text-sm font-weight-bolder"><%= locals.recentMints.firstFour[i].event.ticketeerName %></span></a>
                                                     </h5>
                                                 </div>
-                                                <div class="imgTile" style=`background-image: url('<%= locals.recentMints.firstFour[i].event.imageUrl %>' ` );>
+                                                <div class="imgTile" style=`background-image: url(" <%= locals.recentMints.firstFour[i].event.imageUrl %> "` );>
                                                 </div>
                                                 <h6>
                                                     <%= Number(locals.recentMints.firstFour[i].getDebitedFromSilo).toFixed(6) %> $GET used as fuel.
@@ -55,7 +55,7 @@
                                                 </td>
                                                 <td>
                                                     <a href="../event-profile/<%= locals.recentMints.recentMints[i].event.id %>">
-                                                        <%= locals.recentMints.recentMints[i].event.eventName %>
+                                                        <%= locals.helpers.truncate(locals.recentMints.recentMints[i].event.eventName, 20)%>
                                                     </a>
                                                 </td>
                                                 <td>
