--- a/frontend/views/partials/header.ejs
+++ b/frontend/views/partials/header.ejs
@@ -92,7 +92,7 @@
 
                             <li>
                                 <a href="/usage/newest-events">
-                                    <div class="white-link-text">Newest Events</div>
+                                    <div class="white-link-text">Events</div>
                                 </a>
                             </li>
                             <li>
