--- a/frontend/views/home.ejs
+++ b/frontend/views/home.ejs
@@ -1,7 +1,8 @@
 <%- include ("partials/header") %>
             <div class="container-fluid">
-                <div class="row">
+                <div class="row mt-4">
                     <div class="col-xl-4 col-sm-6 mb-xl-0 mb-4">
+                        <a href="https://explorer.get-protocol.io/" target="_blank" alt="GET protocol NFT ticket explorer">
                         <div class="card">
                             <div class="card-body p-3">
                                 <div class="row">
@@ -10,7 +11,7 @@
                                             <p class="text-sm mb-0 text-capitalize font-weight-bold">Total Tickets Sold</p>
                                             <h5 class="font-weight-bolder mb-0">
                                                 <%= helpers.numberWithCommas(locals.ticketSales)%><br />
-                                                    <span class="text-sm font-weight-bolder"><a href="#">NFT Explorer</a></span>
+                                                    <span class="text-sm font-weight-bolder">view NFT Explorer</span>
                                             </h5>
                                         </div>
                                     </div>
@@ -22,8 +23,10 @@
                                 </div>
                             </div>
                         </div>
+                        </a>
                     </div>
                     <div class="col-xl-4 col-sm-6 mb-xl-0 mb-4">
+                        <a href="https://www.coingecko.com/en/coins/get-protocol" target="_blank" alt="GET protocol - Coin Gecko">
                         <div class="card">
                             <div class="card-body p-3">
                                 <div class="row">
@@ -39,8 +42,10 @@
                                 </div>
                             </div>
                         </div>
+                        </a>
                     </div>
                     <div class="col-xl-4 col-sm-6 mb-xl-0 mb-4">
+                        <a href="https://www.coingecko.com/en/coins/get-protocol" target="_blank" alt="GET protocol - Coin Gecko">
                         <div class="card">
                             <div class="card-body p-3">
                                 <div class="row">
@@ -61,8 +66,51 @@
                                 </div>
                             </div>
                         </div>
+                        </a>
                     </div>
 
+                </div>
+                <div class="row mt-4">
+                    <div class="col-xl-4 col-sm-6 mb-xl-0 mb-4">
+                        <a href="map">
+                        <div class="card homeTile mapTile">
+                            <div class="card-body p-3">
+                                <div class="row">
+                                    <div class="col-12">
+                                            <h3 class="text-lg mb-0 text-uppercase font-weight-bold">VIEW MAP</h3> 
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        </a>
+                    </div>
+                    <div class="col-xl-4 col-sm-6 mb-xl-0 mb-4">
+                        <a href="/usage/newest-events">
+                        <div class="card homeTile eventsTile">
+                            <div class="card-body p-3">
+                                <div class="row">
+                                    <div class="col-12">
+                                            <h3 class="text-lg mb-0 text-uppercase font-weight-bold">Events</h3> 
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        </a>
+                    </div>
+                    
+                    <div class="col-xl-4 col-sm-6 mb-xl-0 mb-4">
+                        <a href="https://twitter.com/GET_comm_dash" target="_blank">
+                        <div class="card homeTile botTile">
+                            <div class="card-body p-3">
+                                <div class="row">
+                                    <div class="col-12">
+                                            <h3 class="text-lg mb-0 text-uppercase font-weight-bold">The Bot</h3> 
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        </a>
+                    </div>
                 </div>
                 <!-- end row -->
                 <div class="row mt-4">
