--- a/frontend/views/partials/footer.ejs
+++ b/frontend/views/partials/footer.ejs
@@ -11,25 +11,54 @@
     }
 </style>
 
-<footer id="footer" class="dark">
+		<!-- Footer
+		============================================= -->
+		<footer id="footer" class="dark">
 
-    <div id="copyrights">
+			<!-- Copyrights
+			============================================= -->
+			<div id="copyrights">
 
-        <div class="container clearfix">
+				<div class="container clearfix">
 
-            <div class="col_half">
-                <img src="../images/logo.-white.svg" alt="GET Community Dashboard" class="footer-logo" width="50%"> Copyrights &copy; 2022 All Rights Reserved.
-            </div>
+					<div class="col_half">
+                        <button type="button" class="btn btn-primary btn-sml" data-toggle="modal" data-target="#exampleModal">
+                            Built & hosted by Brom
+                        </button>
+                    </div>
+                    <div class="col_half col_last tright">
+						Copyrights &copy; 2022 GET Protocol Community.<br>
+                    </div>
+
+				</div>
+
+			</div><!-- #copyrights end -->
+
+		</footer><!-- #footer end -->
+        
+        
 
 
-
+        <!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Brom / 0xbrom.eth</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
         </div>
-
+        <div class="modal-body">
+          <p>Brom, a community member growing his focus on web design / development.</p>
+          <p>What better project and community to do so than GET Protocol! With global exposure, real life working product and a team that assist growth from their community.</p>
+        </div>
+      </div>
     </div>
-    <!-- #copyrights end -->
+  </div>
 
-</footer>
-<!-- #footer end -->
+
+
 
 </div>
 <!-- #wrapper end -->
