--- a/frontend/public/css/custom.css
+++ b/frontend/public/css/custom.css
@@ -31,6 +31,10 @@
     background-image: url('../images/botBg.jpg');
 }
 
+.dailyusedTitle{
+    background-color: #44b490;
+}
+
 footer {
     padding-top: 10px;
     margin-top: 40px;
