added google code

--- a/frontend/views/partials/header.ejs
+++ b/frontend/views/partials/header.ejs
@@ -47,7 +47,18 @@
     <title>
         <%= locals.pageTitle%>
     </title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-TQWNXM63FF"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
 
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'G-TQWNXM63FF');
+    </script>
 </head>
 
 <body class="stretched">
