--- a/frontend/views/partials/header.ejs
+++ b/frontend/views/partials/header.ejs
@@ -48,6 +48,19 @@
         <%= locals.pageTitle%>
     </title>
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-TQWNXM63FF"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'G-TQWNXM63FF');
+    </script>
+
 </head>
 
 <body class="stretched">
