fault fixes with .jpg v .JPG

--- a/frontend/views/event-profile.ejs
+++ b/frontend/views/event-profile.ejs
@@ -11,7 +11,7 @@
                     </a></strong></h1>
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="/">Home</a></li>
-                <li class="breadcrumb-item">Events</li>
+                <li class="breadcrumb-item"><a href="/usage/newest-events">Events</a></li>
                 <li class="breadcrumb-item active" aria-current="page">
                     <a href="../ticketeer/<%= locals.eventData.thisEventResult.ticketeerName%>">
                         <%= locals.eventData.thisEventResult.ticketeerName%>
