fixed event page

--- a/frontend/views/event-profile.ejs
+++ b/frontend/views/event-profile.ejs
@@ -124,7 +124,7 @@
                                                         <%= locals.eventData.tickets[i].getDebitedFromSilo %>
                                                     </td>
                                                     <td>
-                                                        <a href="https://explorer.get-protocol.io/ticket/<%= locals.eventData.tickets[i].nftIndex %>" target="_blank">View Ticket</a>
+                                                        <a href="https://explorer.get-protocol.io/ticket/<%= locals.eventData.tickets[i].nftIndex %>" target="_blank" class="btn btn-sm btn-outline-primary">View Ticket</a>
                                                     </td>
                                                 </tr>
                                                 <% } %>
