new list style for legion page

--- a/frontend/views/legion/home.ejs
+++ b/frontend/views/legion/home.ejs
@@ -7,43 +7,46 @@
 
       <div class="col_half">
       <h3>Blog posts</h3>
+      <div class="list-group">
+        <a href="https://medium.com/coinmonks/nfts-are-much-more-than-just-jpegs-99c20cd963fd" target="_blank" class="list-group-item list-group-item-action"><strong>NFTs are much more than just jpegs. A deep dive into NFT ticketing with GET Protocol.</strong></a>
+        <a href="https://medium.com/get-protocol/death-by-a-thousands-cuts-using-moneyball-thinking-to-strike-out-ticketmaster-31c161f84f1c" target="_blank" class="list-group-item list-group-item-action"><strong>Death by a thousands cuts: Using Moneyball thinking to strike out Ticketmaster</strong></a>
+        <a href="https://eurykleiainvestments.com/blog/get-protocol/" target="_blank" class="list-group-item list-group-item-action"><strong>My Due Dilligence on GET Protocol</strong></a>
+      </div>
       <ul>
-        <li><a href="https://medium.com/coinmonks/nfts-are-much-more-than-just-jpegs-99c20cd963fd" target="_blank">NFTs are much more than just jpegs. A deep dive into NFT ticketing with GET Protocol.</a></li>
-        <li><a href="https://medium.com/get-protocol/death-by-a-thousands-cuts-using-moneyball-thinking-to-strike-out-ticketmaster-31c161f84f1c" target="_blank">Death by a thousands cuts: Using Moneyball thinking to strike out Ticketmaster</a></li>
-      </ul>
+       </ul>
       </div>
 
       <div class="col_half col_last">
         <h3>Press Releases</h3>
-        <ul>
-          <li><a href="https://twitter.com/DeFyTickets/status/1506019511509553153?s=20&t=7wEJcWx4cF5Gr65I82Z9WQ" target="_blank">DEFY Twitter AMA</a></li>
-          <li><a href="https://dallasinnovates.com/fort-worth-founders-launch-platform-to-tie-concert-tickets-to-nfts/" target="_blank">Fort Worth Founders Launch Platform to Tie Concert Tickets to NFTs</a></li>
-          <li><a href="https://finance.yahoo.com/news/neonox-brings-blockchain-nft-ticketing-175000323.html" target="_blank">NeonOx Brings Blockchain and NFT Ticketing Solutions to Events Industry</a></li>
-          <li><a href="https://hypebeast.com/2022/3/lupe-fiasco-gucci-mane-defy-tickets-nft-platform" target="_blank">Lupe Fiasco and Gucci Mane Are Selling Tickets to Their Upcoming Concerts as NFTs</a></li>
-        </ul>
+        <div class="list-group">
+          <a href="https://twitter.com/DeFyTickets/status/1506019511509553153?s=20&t=7wEJcWx4cF5Gr65I82Z9WQ" target="_blank" class="list-group-item list-group-item-action"><strong>DEFY Twitter AMA</strong></a>
+          <a href="https://dallasinnovates.com/fort-worth-founders-launch-platform-to-tie-concert-tickets-to-nfts/" target="_blank" class="list-group-item list-group-item-action"><strong>Fort Worth Founders Launch Platform to Tie Concert Tickets to NFTs</strong></a>
+          <a href="https://finance.yahoo.com/news/neonox-brings-blockchain-nft-ticketing-175000323.html" target="_blank" class="list-group-item list-group-item-action"><strong>NeonOx Brings Blockchain and NFT Ticketing Solutions to Events Industry</strong></a>
+          <a href="https://hypebeast.com/2022/3/lupe-fiasco-gucci-mane-defy-tickets-nft-platform" target="_blank" class="list-group-item list-group-item-action"><strong>Lupe Fiasco and Gucci Mane Are Selling Tickets to Their Upcoming Concerts as NFTs</strong></a>
+        </div>
       </div>
 
       <div class="clear"></div>
 
       <div class="col_half">
         <h3>Assets and files</h3>
-        <ul>
-          <li><a href="https://dune.xyz/jackturnbull/GET-Protocol-Token-Dashboard" target="_blank">Dune Analytics</a></li>
-        </ul>
+        <div class="list-group">
+          <a href="https://dune.xyz/jackturnbull/GET-Protocol-Token-Dashboard" target="_blank" class="list-group-item list-group-item-action"><strong>Dune Analytics</strong></a>
+        </div>
         </div>
   
         <div class="col_half col_last">
           <h3>Official Links</h3>
-          <ul>
-            <li><a href="https://faq.get-protocol.io/get-faqs/token-faq" target="_blank">FAQs</a></li>
-            <li><a href="https://www.get-protocol.io/" target="_blank">GET Official website</a></li>
-            <li><a href="https://docs.get-protocol.io/" target="_blank">The GET Protocol Developer Hub</a></li>
-            <li><a href="https://explorer.get-protocol.io/" target="_blank">NFT Ticket Explorer</a></li>
-            <li><a href="https://thegraph.com/hosted-service/subgraph/getprotocol/get-protocol-subgraph" target="_blank">GET Protocol Subgraph</a></li>
-            <li><a href="https://showcase.get-protocol.io/" target="_blank">GET NFT showcase</a></li>
-            <li><a href="https://www.get-protocol.io/content" target="_blank">Stories published by GET Protocol</a></li>
+          <div class="list-group">
+            <a href="https://faq.get-protocol.io/get-faqs/token-faq" target="_blank" class="list-group-item list-group-item-action"><strong>FAQs</strong></a>
+            <a href="https://www.get-protocol.io/" target="_blank" class="list-group-item list-group-item-action"><strong>GET Official website</strong></a>
+            <a href="https://docs.get-protocol.io/" target="_blank" class="list-group-item list-group-item-action"><strong>The GET Protocol Developer Hub</strong></a>
+            <a href="https://explorer.get-protocol.io/" target="_blank" class="list-group-item list-group-item-action"><strong>NFT Ticket Explorer</strong></a>
+            <a href="https://thegraph.com/hosted-service/subgraph/getprotocol/get-protocol-subgraph" target="_blank" class="list-group-item list-group-item-action"><strong>GET Protocol Subgraph</strong></a>
+            <a href="https://showcase.get-protocol.io/" target="_blank" class="list-group-item list-group-item-action"><strong>GET NFT showcase</strong></a>
+            <a href="https://www.get-protocol.io/content" target="_blank" class="list-group-item list-group-item-action"><strong>Stories published by GET Protocol</strong></a>
 
-          </ul>
+          </div>
         </div>
   
         <div class="clear"></div>
